dark mode fixes.

--- a/conquestdb/staticfiles/new_background_black.css
+++ b/conquestdb/staticfiles/new_background_black.css
@@ -92,3 +92,7 @@ h3 {
 .icon-fill-style {
     fill: rgb(255, 255, 255);
 }
+
+input {
+    color: black !important;
+}
